--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,16 @@ beautifulsoup4==4.8.2
 certifi==2019.11.28
 chardet==3.0.4
 idna==2.9
+joblib==0.14.1
 lxml==4.5.0
+numpy==1.18.2
+pandas==1.0.3
+python-dateutil==2.8.1
+pytz==2019.3
 requests==2.23.0
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+six==1.14.0
+sklearn==0.0
 soupsieve==2.0
 urllib3==1.25.8
